--- a/diana-demo-java-se/cdi-se/pom.xml
+++ b/diana-demo-java-se/cdi-se/pom.xml
@@ -2,7 +2,7 @@
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>cdi-se</artifactId>
- <packaging>jar</packaging>
+ <packaging>pom</packaging>
  <name>Apache Diana Demo using Java CDI SE</name>
  <parent>
   <groupId>diana-demo-java-se</groupId>
@@ -10,9 +10,4 @@
   <version>0.0.1-SNAPSHOT</version>
 </parent>
 
-<modules>
-  <module>cdi-se-key-value</module>
-  <module>cdi-se-document</module>
-  <module>cdi-se-column</module>
-</modules>
 </project>
