--- a/diana-demo-java-se/hello-world/pom.xml
+++ b/diana-demo-java-se/hello-world/pom.xml
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <artifactId>diana-demo-java-se</artifactId>
-   <packaging>jar</packaging>
-   <name>Apache Diana Demo using Java SE</name>
-   <parent>
-    <groupId>org.apache.diana</groupId>
-    <artifactId>diana-demo-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-</parent>
-
-<modules>
-    <module>cdi-se</module>
-    <module>hello-world</module>
-</modules>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>hello-world</artifactId>
+	<packaging>pom</packaging>
+	<name>Apache Diana Demo using Java SE</name>
+	<parent>
+		<groupId>org.apache.diana</groupId>
+		<artifactId>diana-demo-java-se</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<modules>
+		<module>java-se-key-value</module>
+		<module>java-se-document</module>
+		<module>java-se-column</module>
+	</modules>
 </project>
