--- a/diana-demo-java-se/pom.xml
+++ b/diana-demo-java-se/pom.xml
@@ -2,7 +2,7 @@
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>diana-demo-java-se</artifactId>
-   <packaging>jar</packaging>
+   <packaging>pom</packaging>
    <name>Apache Diana Demo using Java SE</name>
    <parent>
     <groupId>org.apache.diana</groupId>
@@ -11,7 +11,6 @@
 </parent>
 
 <modules>
-    <module>cdi-se</module>
     <module>hello-world</module>
 </modules>
 </project>
