--- a/diana-demo-java-se/hello-world/java-se-column/pom.xml
+++ b/diana-demo-java-se/hello-world/java-se-column/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>java-se-column</artifactId>
     <packaging>jar</packaging>
-    <name>Apache Diana API</name>
+    <name>Apache Diana Demo hello world to column</name>
     <parent>
         <groupId>org.apache.diana</groupId>
         <artifactId>hello-world</artifactId>
