--- a/diana-demo-java-se/hello-world/pom.xml
+++ b/diana-demo-java-se/hello-world/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>hello-world</artifactId>
 	<packaging>pom</packaging>
-	<name>Apache Diana Demo using Java SE</name>
+	<name>Apache Diana Demo as first demo</name>
 	<parent>
 		<groupId>org.apache.diana</groupId>
 		<artifactId>diana-demo-java-se</artifactId>
