--- a/diana-demo-java-se/hello-world/java-se-document/pom.xml
+++ b/diana-demo-java-se/hello-world/java-se-document/pom.xml
@@ -1,12 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>java-se-document</artifactId>
-    <packaging>jar</packaging>
-    <name>Apache Diana Demo hello world to documnt</name>
-    <parent>
-        <groupId>org.apache.diana</groupId>
-        <artifactId>hello-world</artifactId>
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+   <modelVersion>4.0.0</modelVersion>
+   <artifactId>java-se-document</artifactId>
+   <packaging>jar</packaging>
+   <name>Apache Diana Demo hello world to documnt</name>
+   <parent>
+    <groupId>org.apache.diana</groupId>
+    <artifactId>hello-world</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+</parent>
+<dependencies>
+    <dependency>
+        <groupId>org.apache.diana.mongodb.driver</groupId>
+        <artifactId>mongodb-document-api</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-    </parent>
+    </dependency>
+</dependencies>
 </project>
