Add column example

--- a/diana-demo-java-se/hello-world/java-se-column/pom.xml
+++ b/diana-demo-java-se/hello-world/java-se-column/pom.xml
@@ -11,8 +11,8 @@
     </parent>
     <dependencies>
         <dependency>
-            <groupId>org.apache.diana.mongodb.driver</groupId>
-            <artifactId>mongodb-document-api</artifactId>
+            <groupId>org.apache.diana.cassandra.driver</groupId>
+            <artifactId>cassandra-column-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
