Adds key-value demo

--- a/diana-demo-java-se/hello-world/java-se-key-value/pom.xml
+++ b/diana-demo-java-se/hello-world/java-se-key-value/pom.xml
@@ -9,4 +9,12 @@
         <artifactId>hello-world</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.diana.hazelcast.driver</groupId>
+            <artifactId>hazelcast-key-value-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
