--- a/diana-demo-java-se/hello-world/java-se-column/pom.xml
+++ b/diana-demo-java-se/hello-world/java-se-column/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <dependencies>
         <dependency>
-            <groupId>org.apache.diana.cassandra.driver</groupId>
+            <groupId>org.jnosql.diana.cassandra.driver</groupId>
             <artifactId>cassandra-column-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
