Updates packages and dependency for key-value demo

--- a/diana-demo-java-se/hello-world/java-se-key-value/pom.xml
+++ b/diana-demo-java-se/hello-world/java-se-key-value/pom.xml
@@ -12,7 +12,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.diana.hazelcast.driver</groupId>
+            <groupId>org.jnosql.diana.hazelcast.driver</groupId>
             <artifactId>hazelcast-key-value-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
