--- a/diana-demo-java-ee/pom.xml
+++ b/diana-demo-java-ee/pom.xml
@@ -9,4 +9,9 @@
         <artifactId>diana-demo-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
+  <modules>
+        <module>jsr363-demo</module>
+   </modules>
+
 </project>
