Refatoring demo diana

--- a/java-se/pom.xml
+++ b/java-se/pom.xml
@@ -5,12 +5,14 @@
    <packaging>pom</packaging>
    <name>Apache Diana Demo using Java SE</name>
    <parent>
-    <groupId>org.apache.diana</groupId>
+    <groupId>org.jnosql.diana</groupId>
     <artifactId>diana-demo-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 </parent>
 
 <modules>
-    <module>hello-world</module>
+    <module>column</module>
+    <module>document</module>
+    <module>key-value</module>
 </modules>
 </project>
