--- a/java-ee/pom.xml
+++ b/java-ee/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>diana-demo-java-ee</artifactId>
+    <artifactId>diana-ee</artifactId>
     <packaging>jar</packaging>
     <name>Apache Diana Demo using Java EE</name>
     <parent>
-        <groupId>org.apache.diana</groupId>
+        <groupId>org.jnosql.diana</groupId>
         <artifactId>diana-demo-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
