--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.apache.diana</groupId>
+    <groupId>org.jnosql.diana</groupId>
     <artifactId>diana-demo-parent</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
@@ -14,8 +14,8 @@
     </properties>
 
     <modules>
-        <module>diana-demo-java-ee</module>
-        <module>diana-demo-java-se</module>
+        <module>diana-ee</module>
+        <module>diana-se</module>
     </modules>
 
     <dependencies>
