--- a/java-se/column/pom.xml
+++ b/java-se/column/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>java-se-column</artifactId>
+    <artifactId>column</artifactId>
     <packaging>jar</packaging>
     <name>Apache Diana Demo hello world to column</name>
     <parent>
         <groupId>org.apache.diana</groupId>
-        <artifactId>hello-world</artifactId>
+        <artifactId>java-se</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <dependencies>
