--- a/diana-ee/pom.xml
+++ b/diana-ee/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>diana-ee</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <name>Apache Diana Demo using Java EE</name>
     <parent>
         <groupId>org.jnosql.diana</groupId>
@@ -12,6 +12,7 @@
 
   <modules>
         <module>jsr363-demo</module>
+        <module>temperature-sensor</module>
    </modules>
 
 </project>
