--- a/diana-ee/temperature-sensor/pom.xml
+++ b/diana-ee/temperature-sensor/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>temperature-sensor</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>jsr363 Maven Webapp</name>
+    <name>Temperature sensor web app</name>
     <url>http://maven.apache.org</url>
     <properties>
         <maven.compile.targetLevel>1.8</maven.compile.targetLevel>
