--- a/diana-se/document/pom.xml
+++ b/diana-se/document/pom.xml
@@ -5,7 +5,7 @@
    <packaging>jar</packaging>
    <name>Apache Diana Demo hello world to documnt</name>
    <parent>
-    <groupId>org.apache.diana</groupId>
+    <groupId>org.jnosql.diana</groupId>
     <artifactId>java-se</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 </parent>
