--- a/diana-se/column/pom.xml
+++ b/diana-se/column/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>column</artifactId>
     <packaging>jar</packaging>
-    <name>Apache Diana Demo hello world to column</name>
+    <name>Demo hello world to column</name>
     <parent>
         <groupId>org.jnosql.diana</groupId>
         <artifactId>java-se</artifactId>
