Updates pom xml file to use uft8 as encoding

--- a/diana-se/document/pom.xml
+++ b/diana-se/document/pom.xml
@@ -9,6 +9,9 @@
     <artifactId>java-se</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 </parent>
+   <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 <dependencies>
     <dependency>
         <groupId>org.jnosql.diana.mongodb.driver</groupId>
