--- a/diana-ee/jsr363-demo/pom.xml
+++ b/diana-ee/jsr363-demo/pom.xml
@@ -14,6 +14,7 @@
         <jersey.version>2.23.2</jersey.version>
         <weld.version>2.3.5.Final</weld.version>
         <jerson.weld.version>2.23.2</jerson.weld.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
