--- a/diana-ee/pom.xml
+++ b/diana-ee/pom.xml
@@ -9,6 +9,9 @@
         <artifactId>diana-demo-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+       <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
   <modules>
         <module>jsr363-demo</module>
