Updates demo with newest api

--- a/diana-ee/jsr363-demo/pom.xml
+++ b/diana-ee/jsr363-demo/pom.xml
@@ -80,8 +80,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jnosql.diana.hazelcast.driver</groupId>
-            <artifactId>hazelcast-key-value-api</artifactId>
+            <groupId>org.jnosql.diana</groupId>
+            <artifactId>hazelcast-driver</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
