--- a/diana-se/column/pom.xml
+++ b/diana-se/column/pom.xml
@@ -9,13 +9,13 @@
         <artifactId>java-se</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-       <properties>
+    <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.jnosql.diana.cassandra.driver</groupId>
-            <artifactId>cassandra-column-api</artifactId>
+            <groupId>org.jnosql.diana</groupId>
+            <artifactId>cassandra-driver</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
