--- a/diana-se/key-value/pom.xml
+++ b/diana-se/key-value/pom.xml
@@ -9,14 +9,14 @@
         <artifactId>java-se</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-       <properties>
+    <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.jnosql.diana.hazelcast.driver</groupId>
-            <artifactId>hazelcast-key-value-api</artifactId>
+            <groupId>org.jnosql.diana</groupId>
+            <artifactId>hazelcast-driver</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
