--- a/diana-ee/temperature-sensor/pom.xml
+++ b/diana-ee/temperature-sensor/pom.xml
@@ -14,7 +14,7 @@
         <jersey.version>2.23.2</jersey.version>
         <weld.version>2.3.5.Final</weld.version>
         <jerson.weld.version>2.23.2</jerson.weld.version>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -102,6 +102,12 @@
             <artifactId>javax.faces</artifactId>
             <version>2.2.8-02</version>
             <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
         </dependency>
 
         <dependency>
