--- a/diana-ee/jsr363-demo/pom.xml
+++ b/diana-ee/jsr363-demo/pom.xml
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>org.jnosql.diana</groupId>
             <artifactId>hazelcast-driver</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
 
     </dependencies>
