--- a/diana-se/document/pom.xml
+++ b/diana-se/document/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.jnosql.diana</groupId>
             <artifactId>mongodb-driver</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
 </project>
