Adds documents sample

--- a/diana-se/pom.xml
+++ b/diana-se/pom.xml
@@ -17,5 +17,6 @@
     <module>column</module>
     <module>document</module>
     <module>key-value</module>
+    <module>double-document</module>
 </modules>
 </project>
