--- a/diana-ee/temperature-java-ee/pom.xml
+++ b/diana-ee/temperature-java-ee/pom.xml
@@ -119,4 +119,13 @@
             <url>file://${basedir}/target/snapshot-repo/</url>
         </snapshotRepository>
     </distributionManagement>
+
+    <repositories>
+     <repository>
+	<id>jnsoql-repo</id>
+	<name>JNoSQL Maven Repository</name>
+	<url>https://dl.bintray.com/jnosql/maven/</url>
+	<layout>default</layout>
+     </repository>
+     </repositories>
 </project>
