Updates Diana version

--- a/diana-se/pom.xml
+++ b/diana-se/pom.xml
@@ -7,7 +7,7 @@
    <parent>
     <groupId>org.jnosql.diana</groupId>
     <artifactId>diana-demo-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2</version>
 </parent>
    <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
