--- a/diana-se/key-value/pom.xml
+++ b/diana-se/key-value/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.jnosql.diana</groupId>
         <artifactId>java-se</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.jnosql.diana</groupId>
             <artifactId>hazelcast-driver</artifactId>
-            <version>0.0.2</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
