--- a/diana-se/column/src/main/resources/diana-cassandra.properties
+++ b/diana-se/column/src/main/resources/diana-cassandra.properties
@@ -1,4 +1,4 @@
-cassandra-hoster-1=172.17.0.2
+cassandra-hoster-1=localhost
 cassandra-threads-number=4
 cassandra-initial-query-1=CREATE KEYSPACE IF NOT EXISTS newKeySpace WITH replication = {'class': 'SimpleStrategy', 'replication_factor' : 3};
 cassandra-initial-query-2=DROP TABLE IF EXISTS newKeySpace.newColumnFamily;
