--- a/diana-se/column/src/main/resources/diana-cassandra.properties
+++ b/diana-se/column/src/main/resources/diana-cassandra.properties
@@ -1,5 +1,5 @@
 cassandra-hoster-1=localhost
 cassandra-threads-number=4
-cassandra-initial-query-1=CREATE KEYSPACE IF NOT EXISTS newKeySpace WITH replication = {'class': 'SimpleStrategy', 'replication_factor' : 3};
-cassandra-initial-query-2=DROP TABLE IF EXISTS newKeySpace.newColumnFamily;
-cassandra-initial-query-3=CREATE COLUMNFAMILY IF NOT EXISTS newKeySpace.newColumnFamily (id bigint PRIMARY KEY, version double, options list<int>, name text);
+cassandra-query-1=CREATE KEYSPACE IF NOT EXISTS newKeySpace WITH replication = {'class': 'SimpleStrategy', 'replication_factor' : 3};
+cassandra-query-2=DROP TABLE IF EXISTS newKeySpace.newColumnFamily;
+cassandra-query-3=CREATE COLUMNFAMILY IF NOT EXISTS newKeySpace.newColumnFamily (id bigint PRIMARY KEY, version double, options list<int>, name text);
