Fixes the pom.xml

--- a/diana-se/mongodb-demo/pom.xml
+++ b/diana-se/mongodb-demo/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>document</artifactId>
+    <artifactId>mongodb-demo</artifactId>
     <packaging>jar</packaging>
-    <name>Diana Demo hello world to documnt</name>
+    <name>Diana Demo hello world to MongoDB</name>
     <parent>
         <groupId>org.jnosql.diana</groupId>
         <artifactId>java-se</artifactId>
