--- a/diana-se/cassandra-demo/pom.xml
+++ b/diana-se/cassandra-demo/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>column</artifactId>
+    <artifactId>cassandra-demo</artifactId>
     <packaging>jar</packaging>
-    <name>Demo hello world to column</name>
+    <name>Demo hello world to Cassandra</name>
     <parent>
         <groupId>org.jnosql.diana</groupId>
         <artifactId>java-se</artifactId>
