--- a/diana-boot/build.gradle
+++ b/diana-boot/build.gradle
@@ -47,8 +47,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
 
     compile('org.jnosql.diana:diana-api:0.0.1-SNAPSHOT')
-    compile('org.jnosql.diana.redis.driver:redis-key-value:0.0.1-SNAPSHOT')
-    compile('org.jnosql.diana.redis.driver:redis-key-value-api:0.0.1-SNAPSHOT')
+    compile('org.jnosql.diana.redis.driver:redis-hazelcast-value:0.0.1-SNAPSHOT')
+    compile('org.jnosql.diana.redis.driver:redis-hazelcast-value-api:0.0.1-SNAPSHOT')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
