"Getting Started Redis-Demo"
Signed-off-by: Breno Pessoa <brenopessoamelo@gmail.com>

--- a/diana-se/pom.xml
+++ b/diana-se/pom.xml
@@ -34,5 +34,6 @@
     <module>mongodb-demo</module>
     <module>hazelcast-demo</module>
     <module>couchbase-demo</module>
+    <module>redis-demo</module>
 </modules>
 </project>
